Поменяли подход, выпилили лишнее

--- a/WordsCounterClient/App.config
+++ b/WordsCounterClient/App.config
@@ -15,10 +15,10 @@
         </bindings>
         <client>
             <endpoint address="net.tcp://localhost:8734/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IServiceCount" contract="ServiceCount.IServiceCount"
+                bindingConfiguration="NetTcpBinding_IServiceCount" contract="ServiceReference1.IServiceCount"
                 name="NetTcpBinding_IServiceCount">
                 <identity>
-                    <userPrincipalName value="seregavspb\Sergey" />
+                    <userPrincipalName value="DESKTOP-MMPVVCQ\Phenix" />
                 </identity>
             </endpoint>
         </client>
